--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 </head>
 <body>
 
-<h1 id="title">What's the weather now?</h1>
+<h1 id="title">Insurance information</h1>
 <form id="search-form">
     <label for="location">Location:</label>
     <input type="text" id="location">
     <button type="submit">Submit</button>
 </form>
-<p id="weather"></p>
+<p id="PeopleCount"></p>
 
 <script src="script.js"></script>
 
