--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 <body>
 
 <h1 id="title">Insurance information</h1>
-<form id="search-form-year"> Year: <br> 
+
+<form id="searchFormYear"> Year: <br> 
     <input type="checkbox" name="yaerCategory0" value="2006"> 2006<br>
     <input type="checkbox" name="yaerCategory1" value="2007"> 2007<br>
     <input type="checkbox" name="yaerCategory2" value="2008"> 2008<br>
@@ -17,33 +18,31 @@
     <input type="checkbox" name="yaerCategory6" value="2012"> 2012<br>
     <input type="checkbox" name="yaerCategory7" value="2013"> 2013<br>
     <input type="checkbox" name="yaerCategory8" value="2014"> 2014<br>
-    <input type="checkbox" name="yaerCategory9" value="2015"> 2015<br>
-    <input type="checkbox" name="yaerCategory10" value="2016"> 2016<br>
-    <input type="checkbox" name="yaerCategory11" value="2017"> 2017<br> <br>  
+    <input type="checkbox" name="yaerCategory9" value="2015"> 2015<br> <br>  
 </form>
 
-<form id="search-form-age"> Age Category: <br>
-    <input type="checkbox" name="ageCategory4" value="4"> under 19 years<br>
-    <input type="checkbox" name="ageCategory0" value="0"> under 65 years<br>
-    <input type="checkbox" name="ageCategory1" value="1"> 18 to 64 years<br>
-    <input type="checkbox" name="ageCategory2" value="2"> 40 to 64 years<br>
-    <input type="checkbox" name="ageCategory3" value="3"> 50 to 64 years<br>
-    <input type="checkbox" name="ageCategory5" value="5"> 21 to 64 years<br> <br>  
+<form id="searchFormAge"> Age Category: <br>
+    <input type="checkbox" name="ageCategory4" value="4"> 4: under 19 years<br>
+    <input type="checkbox" name="ageCategory0" value="0"> 0: under 65 years<br>
+    <input type="checkbox" name="ageCategory1" value="1"> 1: 18 to 64 years<br>
+    <input type="checkbox" name="ageCategory2" value="2"> 2: 40 to 64 years<br>
+    <input type="checkbox" name="ageCategory3" value="3"> 3: 50 to 64 years<br>
+    <input type="checkbox" name="ageCategory5" value="5"> 5: 21 to 64 years<br> <br>  
 </form>
 
-<form id="search-form-income"> Income Category: <br>
-    <input type="checkbox" name="incomeCategory0" value="0"> all income levels<br>
-    <input type="checkbox" name="incomeCategory4" value="4"> at or below 138% of poverty<br>
-    <input type="checkbox" name="incomeCategory1" value="1"> at or below 200% of poverty<br>
-    <input type="checkbox" name="incomeCategory2" value="2"> at or below 250% of poverty <br>
-    <input type="checkbox" name="incomeCategory3" value="3"> at or below 400% of poverty<br>
-    <input type="checkbox" name="incomeCategory5" value="5"> between 138% - 400% of poverty<br> <br>  
+<form id="searchFormIncome"> Income Category: <br>
+    <input type="checkbox" name="incomeCategory0" value="0"> 0: all income levels<br>
+    <input type="checkbox" name="incomeCategory4" value="4"> 4: at or below 138% of poverty<br>
+    <input type="checkbox" name="incomeCategory1" value="1"> 1: at or below 200% of poverty<br>
+    <input type="checkbox" name="incomeCategory2" value="2"> 2: at or below 250% of poverty <br>
+    <input type="checkbox" name="incomeCategory3" value="3"> 3: at or below 400% of poverty<br>
+    <input type="checkbox" name="incomeCategory5" value="5"> 5: between 138% - 400% of poverty<br> <br>  
 </form>
 
-<form id="search-form-sex"> Sex Category: <br>
-    <input type="checkbox" name="sexCategory0" value="0"> both sexes<br>
-    <input type="checkbox" name="sexCategory1" value="1"> male<br>
-    <input type="checkbox" name="sexCategory2" value="2"> female<br> <br>  
+<form id="searchFormSex"> Sex Category: <br>
+    <input type="checkbox" name="sexCategory0" value="0"> 0: both sexes<br>
+    <input type="checkbox" name="sexCategory1" value="1"> 1: male<br>
+    <input type="checkbox" name="sexCategory2" value="2"> 2: female<br> <br>  
     <button type="submit">Submit</button>
 </form>
 
