Add address input

--- a/index.html
+++ b/index.html
@@ -43,6 +43,12 @@
     <input type="checkbox" name="sexCategory0" value="0"> 0: both sexes<br>
     <input type="checkbox" name="sexCategory1" value="1"> 1: male<br>
     <input type="checkbox" name="sexCategory2" value="2"> 2: female<br> <br>  
+</form>
+
+<form id="Address"> Address: <br>
+    Street: <input type="text" id="street"> example: 524 w 122nd street<br>
+    City:  <input type="text" id="city"> example: New York<br>
+    State: <input type="text" id="state"> example: NY<br> <br>  
     <button type="submit">Submit</button>
 </form>
 
