Change default to CU

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 <div class="address">
 <form id="Address"> Address: <br>
-    Street: <input type="text" style="display: table-column; width:30%;" id="street"> Ex: 524 w 122nd street<br>
+    Street: <input type="text" style="display: table-column; width:30%;" id="street"> Ex: 116th Street and Broadway<br>
     City:  <input type="text" style="display: table-column; width:33%;" id="city"> Ex: New York<br>
     State: <input type="text" style="display: table-column; width:31.5%;" id="state"> Ex: NY<br> <br>  
     <button type="submit">Submit</button>
