--- a/index.html
+++ b/index.html
@@ -55,9 +55,7 @@
 
 <div class="address">
 <form id="Address"> Address: <br>
-    Street: <input type="text" style="display: table-column; width:30%;" id="street"> Ex: 116th Street and Broadway<br>
-    City:  <input type="text" style="display: table-column; width:33%;" id="city"> Ex: New York<br>
-    State: <input type="text" style="display: table-column; width:31.5%;" id="state"> Ex: NY<br> <br>  
+    <input type="text" style="display: table-column; width:30%;" id="address"> ex: 4600 Silver Hill Rd, Suitland, MD 20746<br> 
     <button type="submit">Submit</button>
 </form>
 </div>
