--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
     <link rel="stylesheet" href="styles.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
 
@@ -60,7 +65,27 @@
 </form>
 </div>
 
-<p id="PeopleCount" style="font-size:95%;"></p>
+<div class="queryTable">
+    <h2>Query Result</h2>
+    <table class="table">
+      <thead>
+        <tr>
+          <th>State</th>
+          <th>Year</th>
+          <th>Age</th>
+          <th>Income</th>
+          <th>Sex</th>
+          <th>Peopel number</th>
+          <th>Insured percentage</th>
+          <th>Insured margin</th>
+          <th>Uninsured percentage</th>
+          <th>Uninsured margin</th>
+        </tr>
+      </thead>
+      <tbody id="bootstrapTableBody"  style="font-size:100%;">
+      </tbody>
+    </table>
+  </div>
 
 <script src="script.js"></script>
 
